Added comment for vm option